finished alpha template

--- a/about.html
+++ b/about.html
@@ -34,7 +34,6 @@
   <nav class="navbar is-light" role="navigation" aria-label="main navigation">
     <div class="container">
       <div class="navbar-brand">
-        <!-- TODO: Change link to repository homepage if needed -->
         <!-- TODO: Change which navbar-item is-active if needed -->
         <a class="navbar-item is-active" href="index.html">
           <span class="icon"><i class="fas fa-home"></i></span>
@@ -75,14 +74,74 @@
       <!-- Begin page content -->
       <div class="content">
         <h1 class="title">
-          Visualizing San Francisco Fire Department Calls for Service  
+          About Us
         </h1>
-        <p>
-          For this project,we will use <a href="https://data.sfgov.org/Public-Safety/Fire-Department-Calls-for-Service/nuek-vuh3">Fire SF dataset.</a> We will focus on Neighborhoods, to visualize receive time of call with respect to
-          response time from fire department. Visuals will investigate on a number of groups across neighborhoods including: unit type, station area, call type group, dispatch, response, and on scene time.
-          Our visualizations will explore fire department response for various neighborhoods in San Francisco.
-        </p>
-        <p>Learn more about the dataset by navigating to our <a href="dataset.html">data page</a>. Learn more about our team by navigating to our <a href="about.html">about page</a></p>
+        
+        <!-- Profile box -->
+        <!-- https://bulma.io/documentation/layout/media-object/ -->
+        <article class="media">
+          <figure class="media-left">
+            <p class="image is-128x128"><img class="is-rounded" src="assets/kai_middlebrook_profile.jpg"></p>
+          </figure>
+          <div class="media-content">
+            <div class="member1">
+              <p>
+                <strong>Kai Middlebrook</strong><br />
+                Data Science Major, <a href="https://www.usfca.edu/">University of San Francisco</a><br />
+                <em>Expected Graduation: May 2020</em><br />
+                <i class="fas fa-envelope"></i> <a href="mailto:krmiddlebrook@dons.usfca.edu">krmiddlebrook@dons.usfca.edu</a>
+              </p>
+              <p>
+                I am a data scientist. I enjoy applying data science and machine learning to music. 
+                I have experience in natural language processing (NLP), computer vision, digital audio signal processing,
+                and data engineering. Aside from data science, I enjoy listening to and producing music, backpacking, and traveling.
+              </p>
+              <p> Responsibilities for Alpha Release: Home Page, Data Page, Team/About, Design.</p>
+            </div>
+          </div>
+        </article>
+
+        <article class="media">
+          <figure class="media-left">
+            <p class="image is-128x128"><img class="is-rounded" src="assets/justine_huynh_profile.jpg"></p>
+          </figure>
+          <div class="media-content">
+            <div class="member2">
+              <p>
+                <strong>Justine Huynh</strong><br />
+                Data Science Major, <a href="https://www.usfca.edu/">University of San Francisco</a><br />
+                <em>Expected Graduation: May 2020</em><br />
+                <i class="fas fa-envelope"></i> <a href="mailto: jghuynh@dons.usfca.edu"> jghuynh@dons.usfca.edu</a>
+              </p>
+              <p>
+                Hello!<br/>
+                I am Justine Huynh, a Senior Data Science girl. I will graduate in May 2020. I love Pokémon, pink, poké, playing piano, alliterations, and swimming.<br/>
+                My favorite Pokemon is Latias.
+              </p>
+              <p> Responsibilities for Alpha Release: </p>
+            </div>
+          </div>
+        </article>
+
+        <article class="media">
+          <figure class="media-left">
+            <p class="image is-128x128"><img class="is-rounded" src="assets/"></p>
+          </figure>
+          <div class="media-content">
+            <div class="member3">
+              <p>
+                <strong>Ahmed Kaddoura</strong><br />
+                CS Major, <a href="https://www.usfca.edu/">University of San Francisco</a><br />
+                <em>Expected Graduation: </em><br />
+                <i class="fas fa-envelope"></i> <a href="mailto:amkaddoura@dons.usfca.edu">amkaddoura@dons.usfca.edu</a>
+              </p>
+              <p>Enter bio here</p>
+              <p> Responsibilities for Alpha Release: </p>
+            </div>
+          </div>
+        </article>
+        <!-- End profile box -->
+       
       </div>
       <!-- End page content -->
     </div>
