added readme and gitignore

--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
 
         <article class="media">
           <figure class="media-left">
-            <p class="image is-128x128"><img class="is-rounded" src="assets/"></p>
+            <p class="image is-128x128"><img class="is-rounded" src="assets/ahmed_kaddoura_profile.jpg"></p>
           </figure>
           <div class="media-content">
             <div class="member3">
