More details of About page for Justine

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
         <h1 class="title">
           About Us
         </h1>
-        
+
         <!-- Profile box -->
         <!-- https://bulma.io/documentation/layout/media-object/ -->
         <article class="media">
@@ -92,7 +92,7 @@
                 <i class="fas fa-envelope"></i> <a href="mailto:krmiddlebrook@dons.usfca.edu">krmiddlebrook@dons.usfca.edu</a>
               </p>
               <p>
-                I am a data scientist. I enjoy applying data science and machine learning to music. 
+                I am a data scientist. I enjoy applying data science and machine learning to music.
                 I have experience in natural language processing (NLP), computer vision, digital audio signal processing,
                 and data engineering. Aside from data science, I enjoy listening to and producing music, backpacking, and traveling.
               </p>
@@ -115,7 +115,8 @@
               </p>
               <p>
                 Hello!<br/>
-                I am Justine Huynh, a Senior Data Science girl. I will graduate in May 2020. I love Pokémon, pink, poké, playing piano, alliterations, and swimming.<br/>
+                I am Justine Huynh, a Senior Data Science girl. I am fluent in Java and proficient in Python and a little bit of Javascript.
+                I will graduate in May 2020. I love Pokémon, pink, poké, playing piano, alliterations, and swimming.<br/>
                 My favorite Pokemon is Latias.
               </p>
               <p> Responsibilities for Alpha Release: </p>
@@ -136,12 +137,12 @@
                 <i class="fas fa-envelope"></i> <a href="mailto:amkaddoura@dons.usfca.edu">amkaddoura@dons.usfca.edu</a>
               </p>
               <p>Enter bio here</p>
-              <p> Responsibilities for Alpha Release: </p>
+              <p> Responsibilities for Alpha Release: Moral support </p>
             </div>
           </div>
         </article>
         <!-- End profile box -->
-       
+
       </div>
       <!-- End page content -->
     </div>
