--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <div id="main-menu" class="navbar-menu has-text-weight-medium">
         <!-- Left navbar items -->
         <div class="navbar-start">
+          <!-- The data icon -->
           <a class="navbar-item" href="dataset.html" title="Data">
             <span class="icon"><i class="fas fa-table"></i></span>
             <span>Data</span>
@@ -74,7 +75,7 @@
       <!-- Begin page content -->
       <div class="content">
         <h1 class="title">
-          Visualizing San Francisco Fire Department Calls for Service  
+          Visualizing San Francisco Fire Department Calls for Service
         </h1>
         <p>
           For this project,we will use <a href="https://data.sfgov.org/Public-Safety/Fire-Department-Calls-for-Service/nuek-vuh3">Fire SF dataset.</a> We will focus on Neighborhoods, to visualize receive time of call with respect to
