Some more comments, tweaked home page

--- a/about.html
+++ b/about.html
@@ -115,7 +115,8 @@
               </p>
               <p>
                 Hello!<br/>
-                I am Justine Huynh, a Senior Data Science girl. I am fluent in Java and proficient in Python and a little bit of Javascript.
+                I am Justine Huynh, a Senior Data Science girl. I am fluent in Java and proficient in Python and a little bit of Javascript and R.
+                One of my greatest achievements was building an in-memory search engine.
                 I will graduate in May 2020. I love Pokémon, pink, poké, playing piano, alliterations, and swimming.<br/>
                 My favorite Pokemon is Latias.
               </p>
