--- a/dataset.html
+++ b/dataset.html
@@ -143,6 +143,8 @@
                 <td>Text</td>
                 <td>[20019300, 20019299,...]</td>
               </tr>
+
+              <!-- Highlighted this row -->
               <tr class="is-selected">
                 <th>4</th>
                 <td>Call Type</td>
@@ -381,6 +383,8 @@
 
       <p>
         <!-- TODO: Change to link to your Github repository -->
+        <b>Acknowledgements:<b>
+          <br>
         <a href="https://github.com/usf-cs360-spring2020/template-bulma" class="button is-small" style="padding-left: 1em; padding-right: 1em;">
           <i class="fab fa-github-alt"></i>&nbsp;<strong>Github</strong>
         </a>
