--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
           For this project,we will use <a href="https://data.sfgov.org/Public-Safety/Fire-Department-Calls-for-Service/nuek-vuh3">Fire SF dataset.</a> We will focus on Neighborhoods, to visualize receive time of call with respect to
           response time from fire department. Visuals will investigate on a number of groups across neighborhoods including: unit type, station area, call type group, dispatch, response, and on scene time.
           Our visualizations will explore fire department response for various neighborhoods in San Francisco.
+          We are interested in determining whether certain neighborhoods receive a faster dispatch time or not.
         </p>
         <p>Learn more about the dataset by navigating to our <a href="dataset.html">data page</a>. Learn more about our team by navigating to our <a href="about.html">about page</a></p>
       </div>
