Comments, fixing trivial grammar

--- a/dataset.html
+++ b/dataset.html
@@ -292,7 +292,7 @@
                 <td>Text</td>
                 <td>[3, 2, 1]</td>
               </tr>
-              <tr>
+              <tr class = "is-selected">
                 <th>25</th>
                 <td>ALS Unit</td>
                 <td>Does this unit includes ALS (Advance Life Support) resources? Is there a paramedic in this unit?</td>
@@ -330,7 +330,7 @@
               <tr class="is-selected">
                 <th>30</th>
                 <td>Location</td>
-                <td>Latitude and longitude of address obfuscated either to the midblock, intersection or call box</td>
+                <td>Latitude and longitude of address obfuscated either to the midblock, intersection, or call box</td>
                 <td>Coordinates</td>
                 <td>[(37.758510055874°, -122.420168825295°),...]</td>
               </tr>
