--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
           Our visualizations will explore fire department response for various neighborhoods in San Francisco.
           We are interested in determining whether certain neighborhoods receive a faster dispatch time or not.
         </p>
-        <p>Learn more about the dataset by navigating to our <a href="dataset.html">data page</a>. Learn more about our team by navigating to our <a href="about.html">about page</a></p>
+        <p>Learn more about the dataset by navigating to our <a href="dataset.html">data page</a>.
+          <br>
+          Learn more about our team by navigating to our <a href="about.html">about page.</a></p>
       </div>
       <!-- End page content -->
     </div>
