Another grammar error fixed

--- a/dataset.html
+++ b/dataset.html
@@ -78,7 +78,7 @@
         </h1>
 
         <p>We use the <a href="https://data.sfgov.org/Public-Safety/Fire-Department-Calls-for-Service/nuek-vuh3">Fire Department Calls for Service</a> dataset from <a href="https://datasf.org/opendata/">DataSF</a>.
-          This dataset includes all fire units responses to calls. Calls can involve multiple units so their can be many rows with the same call number. The license for the data is as follows:
+          This dataset includes all fire units responses to calls. Calls can involve multiple units so there can be many rows with the same call number. The license for the data is as follows:
         </p>
 
         <!-- Data License -->
