Added a visualization html page, fixing typos

--- a/dataset.html
+++ b/dataset.html
@@ -22,7 +22,7 @@
     <div class="hero-body">
       <div class="container">
         <h1 class="title">Persimmon</h1>
-        <h2 class="subtitle">Welcome to the home of team Persimmon's data visualization midterm project</h2>
+        <h2 class="subtitle">Welcome to the home of team Persimmon's data visualization midterm project!</h2>
       </div>
     </div>
   </section>
@@ -53,6 +53,11 @@
           <a class="navbar-item" href="dataset.html" title="Data">
             <span class="icon"><i class="fas fa-table"></i></span>
             <span>Data</span>
+          </a>
+          <!-- Visualizations Icon -->
+          <a class = "navbar-item" href = "visualizations.html" title = "Visualizations">
+            <span class="icon"><i class="fas fa-heart"></i></span>
+            <span>Visualizations</span>
           </a>
         </div>
 
@@ -367,7 +372,7 @@
         </div>
       </div>
       <!-- End page content -->
-      <div class = "header" fontsize= "30px">
+      <div class = "header" style="font-size: 25px;">
       <h1>
         <b>Wrangling And Processesing Data</b>
       </h1>
