--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="hero-body">
       <div class="container">
         <h1 class="title">Persimmon</h1>
-        <h2 class="subtitle">Welcome to the home of team Persimmon's data visualization midterm project</h2>
+        <h2 class="subtitle">Welcome to the home of team Persimmon's data visualization midterm project!</h2>
       </div>
     </div>
   </section>
@@ -54,6 +54,10 @@
           <a class="navbar-item" href="dataset.html" title="Data">
             <span class="icon"><i class="fas fa-table"></i></span>
             <span>Data</span>
+          </a>
+          <a class = "navbar-item" href = "visualizations.html" title = "Visualizations">
+            <span class="icon"><i class="fas fa-paint-brush"></i></span>
+            <span>Visualizations</span>
           </a>
         </div>
 
@@ -103,6 +107,8 @@
       </p>
 
       <p>
+        <b>Acknowledgements:<b>
+          <br>
         <!-- TODO: Change to link to your Github repository -->
         <a href="https://github.com/usf-cs360-spring2020/template-bulma" class="button is-small" style="padding-left: 1em; padding-right: 1em;">
           <i class="fab fa-github-alt"></i>&nbsp;<strong>Github</strong>
