--- a/visualizations.html
+++ b/visualizations.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- TODO: Change title -->
     <title>Persimmon</title>
 
     <!-- Load Bulma from CDN (consider saving it to repository instead) -->
@@ -23,17 +22,17 @@
     <div class="hero-body">
       <div class="container">
         <h1 class="title">Persimmon</h1>
-        <h2 class="subtitle">Welcome to the home of team Persimmon's data visualization midterm project</h2>
+        <h2 class="subtitle">Welcome to the home of team Persimmon's data visualization midterm project!</h2>
       </div>
     </div>
   </section>
   <!-- End page header -->
-
   <!-- Page navigation -->
   <!-- https://bulma.io/documentation/components/navbar/ -->
   <nav class="navbar is-light" role="navigation" aria-label="main navigation">
     <div class="container">
       <div class="navbar-brand">
+        <!-- TODO: Change link to repository homepage if needed -->
         <!-- TODO: Change which navbar-item is-active if needed -->
         <a class="navbar-item is-active" href="index.html">
           <span class="icon"><i class="fas fa-home"></i></span>
@@ -50,6 +49,7 @@
       <div id="main-menu" class="navbar-menu has-text-weight-medium">
         <!-- Left navbar items -->
         <div class="navbar-start">
+          <!-- The data icon -->
           <a class="navbar-item" href="dataset.html" title="Data">
             <span class="icon"><i class="fas fa-table"></i></span>
             <span>Data</span>
@@ -64,6 +64,7 @@
         <!-- Right navbar items -->
         <div class="navbar-end">
           <!-- TODO: Update as needed -->
+          <!-- About Icon -->
           <a class="navbar-item" href="about.html" title="About">
             <span class="icon"><i class="fas fa-info-circle"></i></span>
             <span>About</span>
@@ -74,86 +75,22 @@
   </nav>
   <!-- End page navigation -->
 
+
+
   <section class="section">
     <div class="container">
       <!-- Begin page content -->
       <div class="content">
         <h1 class="title">
-          About Us
+          Visualizing The Data
         </h1>
-
-        <!-- Profile box -->
-        <!-- https://bulma.io/documentation/layout/media-object/ -->
-        <article class="media">
-          <figure class="media-left">
-            <p class="image is-128x128"><img class="is-rounded" src="assets/kai_middlebrook_profile.jpg"></p>
-          </figure>
-          <div class="media-content">
-            <div class="member1">
-              <p>
-                <strong>Kai Middlebrook</strong><br />
-                Data Science Major, <a href="https://www.usfca.edu/">University of San Francisco</a><br />
-                <em>Expected Graduation: May 2020</em><br />
-                <i class="fas fa-envelope"></i> <a href="mailto:krmiddlebrook@dons.usfca.edu">krmiddlebrook@dons.usfca.edu</a>
-              </p>
-              <p>
-                I am a data scientist. I enjoy applying data science and machine learning to music.
-                I have experience in natural language processing (NLP), computer vision, digital audio signal processing,
-                and data engineering. Aside from data science, I enjoy listening to and producing music, backpacking, and traveling.
-              </p>
-              <p> Responsibilities for Alpha Release: Home Page, Data Page, Team/About, Design.</p>
-            </div>
-          </div>
-        </article>
-
-        <article class="media">
-          <figure class="media-left">
-            <p class="image is-128x128"><img class="is-rounded" src="assets/justine_huynh_profile.jpg"></p>
-          </figure>
-          <div class="media-content">
-            <div class="member2">
-              <p>
-                <strong>Justine Huynh</strong><br />
-                Data Science Major, <a href="https://www.usfca.edu/">University of San Francisco</a><br />
-                <em>Expected Graduation: May 2020</em><br />
-                <i class="fas fa-envelope"></i> <a href="mailto: jghuynh@dons.usfca.edu"> jghuynh@dons.usfca.edu</a>
-              </p>
-              <p>
-                Hello!<br/>
-                I am Justine Huynh, a Senior Data Science girl. I am fluent in Java and proficient in Python and a little bit of Javascript and R.
-                One of my greatest achievements was building an in-memory search engine.
-                I will graduate in May 2020. I love Pokémon, pink, poké, playing piano, alliterations, and swimming.<br/>
-                My favorite Pokemon is Latias.
-              </p>
-              <p> Responsibilities for Alpha Release: </p>
-            </div>
-          </div>
-        </article>
-
-        <article class="media">
-          <figure class="media-left">
-            <p class="image is-128x128"><img class="is-rounded" src="assets/ahmed_kaddoura_profile.jpg"></p>
-          </figure>
-          <div class="media-content">
-            <div class="member3">
-              <p>
-                <strong>Ahmed Kaddoura</strong><br />
-                CS Major, <a href="https://www.usfca.edu/">University of San Francisco</a><br />
-                <em>Expected Graduation: </em><br />
-                <i class="fas fa-envelope"></i> <a href="mailto:amkaddoura@dons.usfca.edu">amkaddoura@dons.usfca.edu</a>
-              </p>
-              <p>Enter bio here</p>
-              <p> Responsibilities for Alpha Release: Moral support </p>
-            </div>
-          </div>
-        </article>
-        <!-- End profile box -->
-
+        <p>
+          This page will be used for visualizing data. We will be drawing beautiful, informative graphs. Stay tuned!
+          </p>
       </div>
       <!-- End page content -->
     </div>
   </section>
-
   <!-- Page footer -->
   <!-- https://bulma.io/documentation/layout/footer/ -->
   <footer class="footer">
@@ -166,6 +103,8 @@
       </p>
 
       <p>
+        <b>Acknowledgements:<b>
+          <br>
         <!-- TODO: Change to link to your Github repository -->
         <a href="https://github.com/usf-cs360-spring2020/template-bulma" class="button is-small" style="padding-left: 1em; padding-right: 1em;">
           <i class="fab fa-github-alt"></i>&nbsp;<strong>Github</strong>
