--- a/dataset.html
+++ b/dataset.html
@@ -56,7 +56,7 @@
           </a>
           <!-- Visualizations Icon -->
           <a class = "navbar-item" href = "visualizations.html" title = "Visualizations">
-            <span class="icon"><i class="fas fa-heart"></i></span>
+            <span class="icon"><i class="fas fa-paint-brush"></i></span>
             <span>Visualizations</span>
           </a>
         </div>
