Added to about us page

--- a/about.html
+++ b/about.html
@@ -133,12 +133,12 @@
             <div class="member3">
               <p>
                 <strong>Ahmed Kaddoura</strong><br />
-                CS Major, <a href="https://www.usfca.edu/">University of San Francisco</a><br />
-                <em>Expected Graduation: </em><br />
+                Computer Science Major, <a href="https://www.usfca.edu/">University of San Francisco</a><br />
+                <em>Expected Graduation: Fall 2020</em><br />
                 <i class="fas fa-envelope"></i> <a href="mailto:amkaddoura@dons.usfca.edu">amkaddoura@dons.usfca.edu</a>
               </p>
               <p>Enter bio here</p>
-              <p> Responsibilities for Alpha Release: Moral support </p>
+              <p> Responsibilities for Alpha Release: </p>
             </div>
           </div>
         </article>
