Wrote down responsibilities

--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
                 I will graduate in May 2020. I love Pokémon, pink, poké, playing piano, alliterations, and swimming.<br/>
                 My favorite Pokemon is Latias.
               </p>
-              <p> Responsibilities for Alpha Release: </p>
+              <p> Responsibilities for Alpha Release: Added Visualizations page, fixed grammar errors</p>
             </div>
           </div>
         </article>
@@ -166,6 +166,10 @@
       </p>
 
       <p>
+        <b>
+          Acknowledgements:
+        </b>
+        <br>
         <!-- TODO: Change to link to your Github repository -->
         <a href="https://github.com/usf-cs360-spring2020/template-bulma" class="button is-small" style="padding-left: 1em; padding-right: 1em;">
           <i class="fab fa-github-alt"></i>&nbsp;<strong>Github</strong>
