added visualization responsibility

--- a/about.html
+++ b/about.html
@@ -102,6 +102,7 @@
                 and data engineering. Aside from data science, I enjoy listening to and producing music, backpacking, and traveling.
               </p>
               <p> Responsibilities for Alpha Release: Home Page, Data Page, Team/About, Design.</p>
+              <p> Responsibilities for Visualizations: Response times encoded by call type group and neighborhoods</p>
             </div>
           </div>
         </article>
