Added about page info

--- a/about.html
+++ b/about.html
@@ -143,7 +143,9 @@
                 <em>Expected Graduation: Fall 2020</em><br />
                 <i class="fas fa-envelope"></i> <a href="mailto:amkaddoura@dons.usfca.edu">amkaddoura@dons.usfca.edu</a>
               </p>
-              <p>Enter bio here</p>
+              <p>I am a computer scientist from San Francisco with an interest in front-end development and game design. I am fluent in Python,
+              Java, C, and JavaScript and was part of a team that built an online 3D chess game in JavaScript. Outside of computers, I enjoy
+              writing songs, playing basketball, and baking.</p>
               <p> Responsibilities for Alpha Release: </p>
             </div>
           </div>
