--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="hero-body">
       <div class="container">
         <h1 class="title">Persimmon</h1>
-        <h2 class="subtitle">Welcome to the home of team Persimmon's data visualization midterm project!</h2>
+        <h2 class="subtitle">Welcome to Team Persimmon's Data Visualization Midterm Project!</h2>
       </div>
     </div>
   </section>
@@ -82,14 +82,13 @@
           Visualizing San Francisco Fire Department Calls for Service
         </h1>
         <p>
-          For this project,we will use <a href="https://data.sfgov.org/Public-Safety/Fire-Department-Calls-for-Service/nuek-vuh3">Fire SF dataset.</a> We will focus on Neighborhoods, to visualize receive time of call with respect to
-          response time from fire department. Visuals will investigate on a number of groups across neighborhoods including: unit type, station area, call type group, dispatch, response, and on scene time.
-          Our visualizations will explore fire department response for various neighborhoods in San Francisco.
-          We are interested in determining whether certain neighborhoods receive a faster dispatch time or not.
+          For this project, we will use the <a href="https://data.sfgov.org/Public-Safety/Fire-Department-Calls-for-Service/nuek-vuh3">Fire Department Calls for Service</a> dataset from DataSF. Our focus is neighborhood data to visualize with respect to
+          response time from the fire department. Visuals will investigate a number of groups across neighborhoods including: unit type, station area, call type group, dispatch, response, and on scene time.
+          We are interested in comparing dispatch times between San Francisco neighberhoods and determining whether certain neighborhoods receive faster dispatch.
         </p>
-        <p>Learn more about the dataset by navigating to our <a href="dataset.html">data page</a>.
+        <p>Learn more about the dataset on our <a href="dataset.html">data page</a>.
           <br>
-          Learn more about our team by navigating to our <a href="about.html">about page.</a></p>
+          Learn more about our team on our <a href="about.html">about page.</a></p>
       </div>
       <!-- End page content -->
     </div>
