Added values and fixed grammar

--- a/dataset.html
+++ b/dataset.html
@@ -155,7 +155,7 @@
                 <td>Call Type</td>
                 <td>Type of call the incident falls into.</td>
                 <td>Text</td>
-                <td>[Medical Incident, Alarms,...]</td>
+                <td>[Medical Incident, Alarms, Structure Fire,...]</td>
               </tr>
               <tr>
                 <th>5</th>
@@ -374,11 +374,12 @@
       <!-- End page content -->
       <div class = "header" style="font-size: 25px;">
       <h1>
-        <b>Wrangling And Processesing Data</b>
+        <b>Wrangling and Processesing Data</b>
       </h1>
       </div>
+      <!-- TODO: Add data wrangling -->
       <p>
-        None yet! Will update soon!
+        Coming soon!
       </p>
 
     </div>
